# kicad-snapshot

./: .gitignore  CHANGELOG.md  DEV_SPEC.ja.md  DEV_SPEC.md  README.ja.md  README.md  SPEC.ja.md  SPEC.md  main.py  pyproject.toml
.github/workflows/: release.yml
src/kicad_snapshot/: __init__.py  __main__.py
tools/: prepare_release.py
