[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "kicad-snapshot"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "platformdirs>=4.9.2",
    "pyside6>=6.10.2",
]

[project.urls]
Homepage = "https://github.com/tanakamasayuki/kicad-snapshot"
Repository = "https://github.com/tanakamasayuki/kicad-snapshot"
Issues = "https://github.com/tanakamasayuki/kicad-snapshot/issues"

[project.scripts]
kicad_snapshot = "kicad_snapshot.__main__:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
