[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "kicad-snapshot"
version = "1.0.5"
description = "Snapshot and visual diff tool for KiCad projects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Tanaka Masayuki" },
]
keywords = ["kicad", "pcb", "eda", "diff", "snapshot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "numpy>=2.2.0",
    "platformdirs>=4.9.2",
    "pyside6>=6.10.2",
]

[project.urls]
Homepage = "https://github.com/tanakamasayuki/kicad-snapshot"
Repository = "https://github.com/tanakamasayuki/kicad-snapshot"
Issues = "https://github.com/tanakamasayuki/kicad-snapshot/issues"

[project.scripts]
kicad_snapshot = "kicad_snapshot.__main__:main"
kicad-snapshot = "kicad_snapshot.__main__:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
